# Doc2Graph

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  readme.md
backend/: README.md  go.mod
docs/: implementation-plan.md
extractor/: .env.example  EXTRACTION_ENHANCEMENTS.md  PARALLEL_PROCESSING.md  README.md  WEB_SEARCH_DISAMBIGUATION.md  benchmark_parallel.py  benchmark_realistic.py  demo_parallel.py  pyproject.toml  test_agent.py  test_force_web_search.py  test_fusion.py  test_web_search_fusion.py
extractor/doc2graph_extractor/: __init__.py  agent.py  main.py  models.py  pipeline.py  prompts.py  resolution.py
extractor/fusion_not_enough_info/: maria_sklodowska_minimal.md  marie_curie_detailed.md  person_a_minimal.md  person_b_detailed.md
extractor/fusion_test_file/: cassius_clay.md  maria_sklodowska.md  marie_curie.md  muhammad_ali.md
extractor/inter_file_relation/: albert_einstein.md  niels_bohr.md
extractor/tests/: conftest.py  test_disambiguation.py  test_enhanced_extraction.py  test_inter_file_relation.py  test_ontology_filter.py  test_parallel_extraction.py  test_pipeline.py  test_pre_resolve_filter.py  test_resolution.py  test_validation_apply.py
frontend/: README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
handoffs/: 2026-04-27-parallel-extraction-and-web-search.md
schemas/: export.schema.json  ontology.json
testdata/wikipedia_markdown/: Abraham_Lincoln.md  Ada_Lovelace.md  Alan_Turing.md  Albert_Einstein.md  Aristotle.md  Charles_Darwin.md  Cleopatra.md  Confucius.md  (+22 more)
(+31 files in other folders)
